overlays/dev/bn-use2-nexus-dev-eks01/example-2048/patches/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-2048
  namespace: tn-nexus-dev
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 40.83.244.161/32, 20.108.194.51/32, 23.96.193.161/32, 198.35.22.112/32, 149.7.192.34/32, 20.108.194.52/32, 12.230.173.12/32, 23.96.193.162/32, 198.35.22.111/32, 20.219.123.52/32, 12.230.173.11/32, 80.120.170.141/32, 195.75.90.111/32, 198.35.20.112/32, 20.219.123.51/32, 40.83.244.162/32, 212.222.163.226/32, 198.35.20.111/32, 195.75.90.112/32
spec:
  ingressClassName: nginx-external
